--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ h1, h2, h3 {
 header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 4.5rem);
-  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.2) 0%, rgba(92, 77, 66, 0.2) 100%), url("../img/bg-masthead-2.jpg");
+  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.2) 0%, rgba(92, 77, 66, 0.2) 100%), url("../img/bg-masthead.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -28,7 +28,7 @@ site-footer {
 
 .jumbotron {
   padding: 30px;
-  background-image: url("../img/bg-masthead-2.jpg");
+  background-image: url("../img/bg-masthead.jpg");
   color: white;
   margin: 0; }
 
@@ -97,6 +97,11 @@ site-footer {
 
 .nifty-menu{
   color:aliceblue;
+}
+
+.nifty-h2{
+  color:rgb(220, 229, 238);
+  background-color: #da590f;
 }
 
 .nifty-menu:hover {
