--- a/css/styles.css
+++ b/css/styles.css
@@ -9,18 +9,23 @@ h1, h2, h3 {
 header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 4.5rem);
-  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.2) 0%, rgba(92, 77, 66, 0.2) 100%), url("../img/bg-masthead.jpg");
+  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.2) 0%, rgba(92, 77, 66, 0.2) 100%), url("../img/bg-masthead-2.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
 }
 
+.nifty-h2 {
+    margin-bottom:0;
+}
+
+
 h2 {
   color: #3046C5; }
 
 header h2 {
-  color: aliceblue; }
+  color: rgb(73, 75, 52); }
 
 site-footer {
   background-image: linear-gradient(#CEC8FF, white);
@@ -28,8 +33,7 @@ site-footer {
 
 .jumbotron {
   padding: 30px;
-  background-image: url("../img/bg-masthead.jpg");
-  color: white;
+  background-image: linear-gradient(to bottom, rgba(92, 77, 66, 0.2) 0%, rgba(92, 77, 66, 0.2) 100%), url("../img/bg-masthead.jpg");
   margin: 0; }
 
 .row-content {
@@ -99,6 +103,14 @@ site-footer {
   color:aliceblue;
 }
 
+.navbar-toggle .icon-bar {
+  background-color: #fff;
+}
+
+.nav-item{
+  text-align: right;
+}
+
 .nifty-h2{
   color:rgb(220, 229, 238);
   background-color: #da590f;
@@ -117,7 +129,6 @@ site-footer {
   color: red;
 }
 
-/* .nifty-accordion {
-  background-color: #caa962;
-  color: aliceblue;
- } */
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
